// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preview scenes > foreground views per preview scene match the snapshot 1`] = `
[
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": undefined,
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {},
    "phase": null,
    "scene": "1/31 crypto / network",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": undefined,
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {},
    "phase": null,
    "scene": "2/31 crypto / network: too small",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": undefined,
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {},
    "phase": null,
    "scene": "3/31 crypto / network: paused",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": undefined,
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {},
    "phase": null,
    "scene": "4/31 crypto / token",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "awaiting-deposit",
    "scene": "5/31 crypto / deposit: waiting",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "awaiting-deposit",
    "scene": "6/31 crypto / deposit: faucet sent",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": "faucet transfer failed on-chain (is the faucet funded on Asset Hub?)",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "awaiting-deposit",
    "scene": "7/31 crypto / deposit: faucet failed",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "awaiting-deposit",
    "scene": "8/31 crypto / deposit: expiring",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "failedAt": 1746554400000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": "Channel expired",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "failed",
    "scene": "9/31 crypto / deposit: expired",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "chainflip-receiving",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746556252000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "chainflip-receiving": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "10/31 crypto / convert: receiving",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "11/31 card / journey: payment",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-conversion",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554814000,
      "latestRouteStatus": "complete",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "routeCompletedAt": 1746554273000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554274000,
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "swap",
    "fundsSeen": true,
    "journeyDone": 3,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": true,
    "meldStage": "complete",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554274000,
    },
    "phase": "awaiting-deposit",
    "scene": "12/31 card / journey: converting",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": true,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "13/31 card / journey: delayed",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": "Hang tight, we're retrying your payment",
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": true,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "14/31 card / journey: retrying (future)",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "failedAt": 1746554273000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": "Top-up didn't go through. No money was taken.",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "failed",
    "scene": "15/31 card / journey: payment failed",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "failedAt": 1746554273000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": "Your bank declined the payment. Check your card details or try another card.",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "failed",
    "scene": "16/31 card / journey: declined",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "meld-payment",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555112000,
      "failedAt": 1746554273000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": "Your top-up didn't go through. Your 52.06 USD has been returned to your card.",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": "waiting",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "failed",
    "scene": "17/31 card / journey: refunded",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554813000,
      "latestRouteStatus": "complete",
      "preDetectionEstimateText": "≈ minutes after you pay",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "meld",
        "routeCompletedLabel": "Payment confirmed",
        "routeStageCount": 1,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "meld-payment",
            "nodeLabel": "Paid",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment started",
        "version": 1,
        "waitingLabel": "Waiting for your payment",
      },
      "routeCompletedAt": 1746554273000,
      "schemaVersion": 1,
      "settledAt": 1746554274000,
      "stageTimestamps": {
        "meld-payment": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 5,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": true,
    "meldStage": "complete",
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "5": 1746554274000,
    },
    "phase": "done",
    "scene": "18/31 card / journey: success",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "chainflip-swapping",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746555052000,
      "latestRouteStatus": "swapping",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "chainflip-swapping": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 2,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "19/31 crypto / convert: swapping",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "chainflip-sending",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554872000,
      "latestRouteStatus": "sending",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {
        "chainflip-sending": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 2,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
    },
    "phase": "swapping",
    "scene": "20/31 crypto / convert: sending",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-conversion",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554812000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "swap",
    "fundsSeen": true,
    "journeyDone": 3,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "awaiting-deposit",
    "scene": "21/31 crypto / pipeline: swap",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-teleport",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554632000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-teleport": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "xcm",
    "fundsSeen": true,
    "journeyDone": 3,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "awaiting-deposit",
    "scene": "22/31 crypto / pipeline: transfer",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-teleport",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554632000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-teleport": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "await-arrival",
    "fundsSeen": true,
    "journeyDone": 3,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "awaiting-deposit",
    "scene": "23/31 crypto / pipeline: arrival wait",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-conversion",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554812000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": "connection lost, reconnecting…",
    "fundingStep": "swap",
    "fundsSeen": true,
    "journeyDone": 3,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "awaiting-deposit",
    "scene": "24/31 crypto / heal: reconnecting",
  },
  {
    "claimStage": "prompted",
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554332000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-top-up": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 4,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "working",
    "scene": "25/31 crypto / claim: consent",
  },
  {
    "claimStage": "crediting",
    "claimedBase": 5000000n,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554332000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-top-up": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 4,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "working",
    "scene": "26/31 crypto / claim: crediting",
  },
  {
    "claimStage": "prompted",
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554332000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-top-up": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 4,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "working",
    "scene": "27/31 crypto / claim: verifying",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746554332000,
      "failedAt": 1746554274000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "routeCompletedAt": 1746554272000,
      "schemaVersion": 1,
      "stageTimestamps": {
        "cash-conversion": 1746554272000,
        "cash-top-up": 1746554272000,
      },
    },
    "fundingError": "Settled, but verification failed. Retry to re-verify the credit.",
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 4,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "4": 1746554272000,
    },
    "phase": "failed",
    "scene": "28/31 crypto / failed: recoverable",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "failedAt": 1746554272000,
      "latestRouteStatus": "waiting",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "stageTimestamps": {},
    },
    "fundingError": "The deposit didn't go through. It is being returned to your recovery address.",
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 2,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
    },
    "phase": "failed",
    "scene": "29/31 crypto / failed: refunded",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": {
      "confirmedStageKey": "cash-top-up",
      "detectedAt": 1746554272000,
      "estimatedCompletionAt": 1746556252000,
      "latestRouteStatus": "receiving",
      "preDetectionEstimateText": "≈10 min after your transfer",
      "profile": {
        "cadenceMs": 5000,
        "expectedUserDelayMs": 600000,
        "id": "chainflip",
        "routeCompletedLabel": "Payment received",
        "routeStageCount": 3,
        "settledLabel": "Ready to spend",
        "stages": [
          {
            "activeLabel": "Confirming your payment",
            "key": "chainflip-receiving",
            "nodeLabel": "Confirmed",
            "nominalMs": 1200000,
          },
          {
            "activeLabel": "Processing through Chainflip",
            "key": "chainflip-swapping",
            "nodeLabel": "Swapped",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Sending your payment",
            "key": "chainflip-sending",
            "nodeLabel": "Sent",
            "nominalMs": 60000,
          },
          {
            "activeLabel": "Converting to $CASH",
            "key": "cash-conversion",
            "nodeLabel": "Converted",
            "nominalMs": 180000,
          },
          {
            "activeLabel": "Teleporting $CASH",
            "key": "cash-teleport",
            "nodeLabel": "Teleported",
            "nominalMs": 300000,
          },
          {
            "activeLabel": "Adding to your balance",
            "key": "cash-top-up",
            "nodeLabel": "Added",
            "nominalMs": 60000,
          },
        ],
        "startedNodeLabel": "Payment seen",
        "version": 2,
        "waitingLabel": "Waiting for your transfer",
      },
      "schemaVersion": 1,
      "settledAt": 1746554273000,
      "stageTimestamps": {
        "chainflip-receiving": 1746554272000,
      },
    },
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": "done",
    "fundsSeen": true,
    "journeyDone": 5,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {
      "1": 1746554100000,
      "2": 1746554272000,
      "5": 1746554273000,
    },
    "phase": "done",
    "scene": "30/31 crypto / success",
  },
  {
    "claimStage": null,
    "claimedBase": null,
    "foregroundSnapshot": undefined,
    "fundingError": null,
    "fundingNotice": null,
    "fundingStep": null,
    "fundsSeen": false,
    "journeyDone": 1,
    "meldDelayed": false,
    "meldFailureMessage": null,
    "meldHandedOff": false,
    "meldStage": null,
    "meldSubmitted": false,
    "milestones": {},
    "phase": null,
    "scene": "31/31 crypto / resume spinner",
  },
]
`;

exports[`request list projection > projects the fixture records exactly as today 1`] = `
{
  "chainflip": [
    {
      "amount": "40",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "0x-fixture-deposit-4",
        "network": {
          "icon": "/icons/ethereum.svg",
          "label": "Ethereum",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/ethereum.svg",
          "label": "ETH",
        },
      },
      "id": "crypto:dot-assethub#4",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746553500000,
        "estimateText": "Ready by 17:54",
        "stageTimestamps": {
          "cash-conversion": 1746553500000,
        },
        "view": {
          "activeNodeIndex": 4,
          "activeStageKey": "cash-conversion",
          "kind": "active",
          "label": "Converting to $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "complete",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "complete",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "complete",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "current",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 900000,
          "value": 0.7295657894736842,
          "valueNow": 73,
          "valueText": "Converting to $CASH",
        },
      },
      "quote": {
        "amount": "0.0158",
        "symbol": "ETH",
      },
      "route": "crypto",
      "startedAt": 1746553200000,
      "state": {
        "kind": "finishing",
        "status": "Converting to $CASH",
      },
    },
    {
      "amount": "25",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-3",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:dot-assethub#3",
      "progress": {
        "cadenceMs": 5000,
        "estimateText": "≈10 min after your transfer",
        "stageTimestamps": {},
        "view": {
          "activeNodeIndex": 0,
          "kind": "waiting",
          "label": "Waiting for your transfer",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "current",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "upcoming",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "upcoming",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "upcoming",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 1800000,
          "value": 0.07999012721567307,
          "valueNow": 8,
          "valueText": "Waiting for your transfer",
        },
      },
      "quote": {
        "amount": "0.00023",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746552600000,
      "state": {
        "kind": "awaiting-transfer",
        "status": "Waiting for your transfer",
      },
    },
    {
      "amount": "5",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-2",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:dot-assethub#2",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746551400000,
        "estimateText": "Ready by 17:29",
        "failedAt": 1746551400000,
        "stageTimestamps": {
          "cash-conversion": 1746551400000,
        },
        "view": {
          "activeNodeIndex": 4,
          "activeStageKey": "cash-conversion",
          "kind": "failed",
          "label": "Converting to $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "complete",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "complete",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "complete",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "current",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 0,
          "value": 0.5973684210526315,
          "valueNow": 60,
          "valueText": "Converting to $CASH",
        },
      },
      "quote": {
        "amount": "0.00004545",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746550800000,
      "state": {
        "at": 1746551400000,
        "kind": "failed",
        "reason": "shortfall: the deposit is below the swap minimum",
      },
    },
    {
      "amount": "10",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "sol-fixture-deposit-1",
        "network": {
          "icon": "/icons/solana.svg",
          "label": "Solana",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/solana.svg",
          "label": "SOL",
        },
      },
      "id": "crypto:dot-assethub#1",
      "progress": {
        "cadenceMs": 5000,
        "estimateText": "≈10 min after your transfer",
        "stageTimestamps": {},
        "view": {
          "activeNodeIndex": 0,
          "kind": "waiting",
          "label": "Waiting for your transfer",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "current",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "upcoming",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "upcoming",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "upcoming",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 7200000,
          "value": 0.07999999999999999,
          "valueNow": 8,
          "valueText": "Waiting for your transfer",
        },
      },
      "quote": {
        "amount": "0.071",
        "symbol": "SOL",
      },
      "route": "crypto",
      "startedAt": 1746547200000,
      "state": {
        "kind": "awaiting-transfer",
        "status": "Waiting for your transfer",
      },
    },
    {
      "amount": "15",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-7",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:#7",
      "progress": {
        "cadenceMs": 5000,
        "estimateText": "≈10 min after your transfer",
        "stageTimestamps": {},
        "view": {
          "activeNodeIndex": 0,
          "kind": "waiting",
          "label": "Waiting for your transfer",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "current",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "upcoming",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "upcoming",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "upcoming",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 259200000,
          "value": 0.08,
          "valueNow": 8,
          "valueText": "Waiting for your transfer",
        },
      },
      "quote": {
        "amount": "0.00014",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746295200000,
      "state": {
        "kind": "awaiting-transfer",
        "status": "Waiting for your transfer",
      },
    },
  ],
  "meld": [
    {
      "amount": "50",
      "details": {
        "arrivalEstimate": "≈ minutes after you pay",
        "method": {
          "icon": "/icons/card.svg",
          "label": "Card",
        },
        "provider": {
          "icon": "/icons/card.svg",
          "label": "Meld",
        },
        "region": "US",
      },
      "id": "card:meld-card#2",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746552120000,
        "estimateText": "Ready by 17:36",
        "stageTimestamps": {
          "meld-payment": 1746552120000,
        },
        "view": {
          "activeNodeIndex": 1,
          "activeStageKey": "meld-payment",
          "kind": "active",
          "label": "Confirming your payment",
          "nodes": [
            {
              "key": "started",
              "label": "Payment started",
              "state": "complete",
            },
            {
              "key": "meld-payment",
              "label": "Paid",
              "state": "current",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 2280000,
          "value": 0.449017857142857,
          "valueNow": 45,
          "valueText": "Confirming your payment",
        },
      },
      "quote": {
        "amount": "52.06",
        "fee": "1.56",
        "symbol": "USD",
      },
      "route": "card",
      "startedAt": 1746552000000,
      "state": {
        "kind": "finishing",
        "status": "Confirming your payment",
      },
    },
    {
      "amount": "50",
      "details": {
        "arrivalEstimate": "≈ minutes after you pay",
        "method": {
          "icon": "/icons/card.svg",
          "label": "Card",
        },
        "provider": {
          "icon": "/icons/card.svg",
          "label": "Meld",
        },
        "region": "US",
      },
      "id": "card:meld-card#1",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746549120000,
        "estimateText": "Done",
        "settledAt": 1746549600000,
        "stageTimestamps": {
          "cash-conversion": 1746549300000,
          "meld-payment": 1746549120000,
        },
        "view": {
          "activeNodeIndex": 4,
          "kind": "settled",
          "label": "Ready to spend",
          "nodes": [
            {
              "key": "started",
              "label": "Payment started",
              "state": "complete",
            },
            {
              "key": "meld-payment",
              "label": "Paid",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "complete",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "complete",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "complete",
            },
          ],
          "stageElapsedMs": 0,
          "value": 1,
          "valueNow": 100,
          "valueText": "Ready to spend",
        },
      },
      "quote": {
        "amount": "52.06",
        "fee": "1.56",
        "symbol": "USD",
      },
      "route": "card",
      "startedAt": 1746549000000,
      "state": {
        "at": 1746549600000,
        "creditedAmount": "50.25",
        "kind": "settled",
      },
    },
  ],
}
`;

exports[`request list projection > projects the fixture records with live statuses exactly as today 1`] = `
{
  "chainflip": [
    {
      "amount": "40",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "0x-fixture-deposit-4",
        "network": {
          "icon": "/icons/ethereum.svg",
          "label": "Ethereum",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/ethereum.svg",
          "label": "ETH",
        },
      },
      "id": "crypto:dot-assethub#4",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746553500000,
        "estimateText": "Ready by 17:54",
        "failedAt": 1746554400000,
        "stageTimestamps": {
          "cash-conversion": 1746553500000,
        },
        "view": {
          "activeNodeIndex": 4,
          "activeStageKey": "cash-conversion",
          "kind": "failed",
          "label": "Converting to $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "complete",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "complete",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "complete",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "current",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 900000,
          "value": 0.7295657894736842,
          "valueNow": 73,
          "valueText": "Converting to $CASH",
        },
      },
      "quote": {
        "amount": "0.0158",
        "symbol": "ETH",
      },
      "route": "crypto",
      "startedAt": 1746553200000,
      "state": {
        "at": 1746554400000,
        "kind": "failed",
        "reason": "funding failed in the background",
      },
    },
    {
      "amount": "25",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-3",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:dot-assethub#3",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746554400000,
        "estimateText": "Ready by 18:09",
        "stageTimestamps": {
          "cash-conversion": 1746554400000,
        },
        "view": {
          "activeNodeIndex": 4,
          "activeStageKey": "cash-conversion",
          "kind": "active",
          "label": "Converting to $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "complete",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "complete",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "complete",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "current",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 0,
          "value": 0.5973684210526315,
          "valueNow": 60,
          "valueText": "Converting to $CASH",
        },
      },
      "quote": {
        "amount": "0.00023",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746552600000,
      "state": {
        "kind": "finishing",
        "status": "Converting to $CASH",
      },
    },
    {
      "amount": "5",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-2",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:dot-assethub#2",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746551400000,
        "estimateText": "Ready by 17:29",
        "failedAt": 1746551400000,
        "stageTimestamps": {
          "cash-conversion": 1746551400000,
        },
        "view": {
          "activeNodeIndex": 4,
          "activeStageKey": "cash-conversion",
          "kind": "failed",
          "label": "Converting to $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "complete",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "complete",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "complete",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "current",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 0,
          "value": 0.5973684210526315,
          "valueNow": 60,
          "valueText": "Converting to $CASH",
        },
      },
      "quote": {
        "amount": "0.00004545",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746550800000,
      "state": {
        "at": 1746551400000,
        "kind": "failed",
        "reason": "shortfall: the deposit is below the swap minimum",
      },
    },
    {
      "amount": "10",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "sol-fixture-deposit-1",
        "network": {
          "icon": "/icons/solana.svg",
          "label": "Solana",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/solana.svg",
          "label": "SOL",
        },
      },
      "id": "crypto:dot-assethub#1",
      "progress": {
        "cadenceMs": 5000,
        "estimateText": "≈10 min after your transfer",
        "stageTimestamps": {},
        "view": {
          "activeNodeIndex": 0,
          "kind": "waiting",
          "label": "Waiting for your transfer",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "current",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "upcoming",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "upcoming",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "upcoming",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 7200000,
          "value": 0.07999999999999999,
          "valueNow": 8,
          "valueText": "Waiting for your transfer",
        },
      },
      "quote": {
        "amount": "0.071",
        "symbol": "SOL",
      },
      "route": "crypto",
      "startedAt": 1746547200000,
      "state": {
        "kind": "awaiting-transfer",
        "status": "Waiting for your transfer",
      },
    },
    {
      "amount": "15",
      "details": {
        "arrivalEstimate": "≈10 min after your transfer",
        "depositAddress": "bc1q-fixture-deposit-7",
        "network": {
          "icon": "/icons/bitcoin.svg",
          "label": "Bitcoin",
        },
        "provider": {
          "icon": "/icons/chainflip.png",
          "label": "Chainflip",
        },
        "token": {
          "icon": "/icons/bitcoin.svg",
          "label": "BTC",
        },
      },
      "id": "crypto:#7",
      "progress": {
        "cadenceMs": 5000,
        "estimateText": "≈10 min after your transfer",
        "stageTimestamps": {},
        "view": {
          "activeNodeIndex": 0,
          "kind": "waiting",
          "label": "Waiting for your transfer",
          "nodes": [
            {
              "key": "started",
              "label": "Payment seen",
              "state": "current",
            },
            {
              "key": "chainflip-receiving",
              "label": "Confirmed",
              "state": "upcoming",
            },
            {
              "key": "chainflip-swapping",
              "label": "Swapped",
              "state": "upcoming",
            },
            {
              "key": "chainflip-sending",
              "label": "Sent",
              "state": "upcoming",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "upcoming",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "upcoming",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 259200000,
          "value": 0.08,
          "valueNow": 8,
          "valueText": "Waiting for your transfer",
        },
      },
      "quote": {
        "amount": "0.00014",
        "symbol": "BTC",
      },
      "route": "crypto",
      "startedAt": 1746295200000,
      "state": {
        "kind": "awaiting-transfer",
        "status": "Waiting for your transfer",
      },
    },
  ],
  "meld": [
    {
      "amount": "50",
      "details": {
        "arrivalEstimate": "≈ minutes after you pay",
        "method": {
          "icon": "/icons/card.svg",
          "label": "Card",
        },
        "provider": {
          "icon": "/icons/card.svg",
          "label": "Meld",
        },
        "region": "US",
      },
      "id": "card:meld-card#2",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746552120000,
        "estimateText": "Ready by 18:06",
        "stageTimestamps": {
          "cash-teleport": 1746554400000,
          "meld-payment": 1746552120000,
        },
        "view": {
          "activeNodeIndex": 3,
          "activeStageKey": "cash-teleport",
          "kind": "active",
          "label": "Teleporting $CASH",
          "nodes": [
            {
              "key": "started",
              "label": "Payment started",
              "state": "complete",
            },
            {
              "key": "meld-payment",
              "label": "Paid",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "complete",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "current",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "upcoming",
            },
          ],
          "stageElapsedMs": 0,
          "value": 0.6357142857142857,
          "valueNow": 64,
          "valueText": "Teleporting $CASH",
        },
      },
      "quote": {
        "amount": "52.06",
        "fee": "1.56",
        "symbol": "USD",
      },
      "route": "card",
      "startedAt": 1746552000000,
      "state": {
        "kind": "finishing",
        "status": "Teleporting $CASH",
      },
    },
    {
      "amount": "50",
      "details": {
        "arrivalEstimate": "≈ minutes after you pay",
        "method": {
          "icon": "/icons/card.svg",
          "label": "Card",
        },
        "provider": {
          "icon": "/icons/card.svg",
          "label": "Meld",
        },
        "region": "US",
      },
      "id": "card:meld-card#1",
      "progress": {
        "cadenceMs": 5000,
        "detectedAt": 1746549120000,
        "estimateText": "Done",
        "settledAt": 1746549600000,
        "stageTimestamps": {
          "cash-conversion": 1746549300000,
          "meld-payment": 1746549120000,
        },
        "view": {
          "activeNodeIndex": 4,
          "kind": "settled",
          "label": "Ready to spend",
          "nodes": [
            {
              "key": "started",
              "label": "Payment started",
              "state": "complete",
            },
            {
              "key": "meld-payment",
              "label": "Paid",
              "state": "complete",
            },
            {
              "key": "cash-conversion",
              "label": "Converted",
              "state": "complete",
            },
            {
              "key": "cash-teleport",
              "label": "Teleported",
              "state": "complete",
            },
            {
              "key": "cash-top-up",
              "label": "Added",
              "state": "complete",
            },
          ],
          "stageElapsedMs": 0,
          "value": 1,
          "valueNow": 100,
          "valueText": "Ready to spend",
        },
      },
      "quote": {
        "amount": "52.06",
        "fee": "1.56",
        "symbol": "USD",
      },
      "route": "card",
      "startedAt": 1746549000000,
      "state": {
        "at": 1746549600000,
        "creditedAmount": "50.25",
        "kind": "settled",
      },
    },
  ],
}
`;
